# resume-jd-scorer

./: !  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  findings.md  index.html  models.py  progress.md  scorer.py  sync-skills.sh  task_plan.md  test_save_jd.py
assets/: index-CKm0smSP.js  (+1 more)
daily-ai-digest/: .env.example  2026-06-22-daily-ai-digest-design.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
daily-ai-digest/configs/: filters.yml  schedule.yml  sources.yml  topics.yml
daily-ai-digest/deploy/: daily-ai-digest.service  daily-ai-digest.timer
daily-ai-digest/docs/: architecture.md  operations.md  source-policy.md
daily-ai-digest/docs/superpowers/plans/: 2026-06-24-compact-feishu-post.md  2026-06-29-feishu-learning-plan-tracking.md
daily-ai-digest/docs/superpowers/specs/: 2026-06-24-compact-feishu-post-design.md  (+1 more)
daily-ai-digest/output/graphify-pilot-full/: MOBILE_SUMMARY.md
daily-ai-digest/scripts/: graphify_refresh.sh  run_daily.sh  validate_config.sh
daily-ai-digest/src/digest/: __init__.py  config.py  models.py
daily-ai-digest/tests/fixtures/: github-releases.json  openai-news.html
daily-ai-digest/tests/integration/: test_daily.py  test_learning_plan_cli.py
daily-ai-digest/tests/unit/: test_cluster.py  test_collect.py  test_config.py  test_default_collector.py  test_feishu.py  test_feishu_sheets.py  test_graphify_refresh.py  test_learning_mapper.py  test_learning_tracker.py  test_minimax.py  test_models.py  test_normalize.py  test_quality.py  test_render.py  test_schedule.py  test_sources_config.py  test_state.py
(+272 files in other folders)
