[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-ai-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "filelock>=3.15,<4",
  "openai>=1.68,<2",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
